# pkb

./: .gitignore  README.md  build-frontend.sh  prepare_embeddings_and_data.py  pyproject.toml
elastic/: create_elastic_dense_vector_index.sh  elastic_dense_vector_search.py  elastic_keyword_search.py  load_elastic_dense_vector_index.py  load_elastic_keyword_index.py
examples/: data_source_usage.py
frontend/: README.md  add-components.sh  bun.lockb  package.json  svelte.config.js
frontend/src/routes/: +page.svelte
old_scripts/: create_elastic_keyword_index.sh  elastic_dense_vector_search.py  elastic_keyword_search.py  load_elastic_dense_vector_index.py  load_elastic_keyword_index.py
pkb/: cli.py  config.py  embeddings.py  loading.py  search.py  server.py
pkb/core/: __init__.py  exceptions.py  models.py
pkb/data_sources/: __init__.py  base.py  obsidian.py  zotero.py
pkb/indexing/: __init__.py  manager.py  processor.py
pkb/search_backends/: base.py
pkb/search_backends/elastic/: keyword.py  vector.py
pkb/state/: __init__.py  detector.py  store.py  utils.py
tests/: test_data_sources.py  test_indexing.py  test_state_tracking.py
